Revert "Merge branch 'develop' into feature/315-Implementing-Portfolio-system"
This reverts commit 1719f7ec81e9d90facf009cbe2c88d238481f0a7, reversing
changes made to ecec5137471acd238d55d5ffcc9c45ac600e239a.

--- a/NotificationSystem/appsettingsnotificationsystem.Development.json
+++ b/NotificationSystem/appsettingsnotificationsystem.Development.json
@@ -6,8 +6,8 @@
             "Password": "guest"
         },
         "SendGrid": {
-            "ApiKey": "test",
-            "EmailFrom": "test@test.nl",
+            "ApiKey": "",
+            "EmailFrom": "",
             "SandboxMode": false
         }
     },
