--- a/Data/4_Data.csproj
+++ b/Data/4_Data.csproj
@@ -1,55 +1,34 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <LangVersion>8</LangVersion>
-    <Version>0.9.0-beta</Version>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <LangVersion>8</LangVersion>
+        <Version>0.9.0-beta</Version>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Configurations\IdentityMigrations\**" />
-    <EmbeddedResource Remove="Configurations\IdentityMigrations\**" />
-    <None Remove="Configurations\IdentityMigrations\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Migrations\20201006000639_InitLikedProjectByUserTable.cs" />
-    <Compile Remove="Migrations\20201006000639_InitLikedProjectByUserTable.Designer.cs" />
-    <Compile Remove="Migrations\20201111140957_RenamedTableToUserTasks.cs" />
-    <Compile Remove="Migrations\20201111140957_RenamedTableToUserTasks.Designer.cs" />
-    <Compile Remove="Migrations\20201119130835_AddedIdentityIdToInstitution.cs" />
-    <Compile Remove="Migrations\20201119130835_AddedIdentityIdToInstitution.Designer.cs" />
-    <Compile Remove="Migrations\20201129133208_AddedCallToActions.cs" />
-    <Compile Remove="Migrations\20201129133208_AddedCallToActions.Designer.cs" />
-    <Compile Remove="Migrations\20201203182047_UserTaskModelRefactor.cs" />
-    <Compile Remove="Migrations\20201203182047_UserTaskModelRefactor.Designer.cs" />
-    <Compile Remove="Migrations\20201205133647_AddDateToLikes.cs" />
-    <Compile Remove="Migrations\20201205133647_AddDateToLikes.Designer.cs" />
-    <Compile Remove="Migrations\20210118102224_Initial.cs" />
-    <Compile Remove="Migrations\20210118102224_Initial.Designer.cs" />
-    <Compile Remove="Migrations\20210120084422_MergedMigration.cs" />
-    <Compile Remove="Migrations\20210120084422_MergedMigration.Designer.cs" />
-  </ItemGroup>
-
-  
     <ItemGroup>
-    <PackageReference Include="Bogus" Version="29.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
+        <Compile Remove="Configurations\IdentityMigrations\**" />
+        <EmbeddedResource Remove="Configurations\IdentityMigrations\**" />
+        <None Remove="Configurations\IdentityMigrations\**" />
+    </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Bogus" Version="29.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Models\5_Models.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Models\5_Models.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Configurations\IdentityMigrations\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Configurations\IdentityMigrations\" />
+    </ItemGroup>
 
 </Project>
