--- a/MessageBrokerPublisher/MessageBrokerPublisher.csproj
+++ b/MessageBrokerPublisher/MessageBrokerPublisher.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>0.9.0-beta</Version>
+    <Version>1.0.1-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
