Added authentication for API -> IdentityServer

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -10,7 +10,9 @@
         },
         "IdentityServer": {
             "IdentityUrl": "https://localhost:5005",
-            "DevelopmentIdentityUrl": "https://localhost:5005"
+            "DevelopmentIdentityUrl": "https://localhost:5005",
+            "ClientId": "dex-api",
+            "ClientSecret": "kP+O2lU</!u><.5Avx@MMe4b||_^l"
         },
         "Swagger": {
             "ClientId": "Swagger-UI"
