--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -10,7 +10,9 @@
             "ClientSecret": ""
         },
         "IdentityServer": {
-            "IdentityUrl": ""
+            "IdentityUrl": "",
+            "ClientId": "",
+            "ClientSecret": ""
         },
         "Swagger": {
             "ClientId": "Swagger-UI"
