--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -38,7 +38,16 @@
         "swagger": {
             "RedirectUrisSwagger": "https://localhost:5001/oauth2-redirect.html",
             "PostLogoutUrisSwagger": "https://localhost:5001"
+        },
+        "JobScheduler": {
+            "ClientId": "job-scheduler",
+            "ClientSecret": "`HP(@`aQ]>wO4XJa4hU>,-HLHpo4h~"
+        },
+        "ApiAuthentication": {
+            "ClientId": "dex-api",
+            "ClientSecret": "kP+O2lU</!u><.5Avx@MMe4b||_^l"
         }
+
     },
     "AllowedHosts": "*"
 }
