--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -13,7 +13,7 @@
         "Self": {
             "JwtAuthority": "",
             "DeleteTokenLifeTimeInDays": 90,
-            "PublicOrigin":  ""
+            "PublicOrigin": ""
         },
         "Api": {
             "DeXApiUrl": "",
@@ -41,8 +41,12 @@
         },
         "JobScheduler": {
             "ClientId": "",
-            "ClientSecret":  "" 
-        } 
+            "ClientSecret": ""
+        },
+        "ApiAuthentication": {
+            "ClientId": "",
+            "ClientSecret": ""
+        }
     },
     "AllowedHosts": "*"
 }
