--- a/API/100_API.csproj
+++ b/API/100_API.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data\4_Data.csproj" />
-    <ProjectReference Include="..\MessageBrokerPublisher\MessageBrokerPublisher.csproj" />
-    <ProjectReference Include="..\Models\5_Models.csproj" />
-    <ProjectReference Include="..\NotificationSystem\NotificationSystem.csproj" />
-    <ProjectReference Include="..\Services\2_Services.csproj" />
+    <ProjectReference Include="..\Data\130_Data.csproj" />
+    <ProjectReference Include="..\MessageBrokerPublisher\160_MessageBrokerPublisher.csproj" />
+    <ProjectReference Include="..\Models\140_Models.csproj" />
+    <ProjectReference Include="..\NotificationSystem\170_NotificationSystem.csproj" />
+    <ProjectReference Include="..\Services\110_Services.csproj" />
   </ItemGroup>
 
 
