--- a/NotificationSystem.Tests/171_NotificationSystem.Tests.csproj
+++ b/NotificationSystem.Tests/171_NotificationSystem.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NotificationSystem\NotificationSystem.csproj" />
+    <ProjectReference Include="..\NotificationSystem\170_NotificationSystem.csproj" />
   </ItemGroup>
 
 </Project>
