--- a/NotificationSystem/Dockerfile
+++ b/NotificationSystem/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . ./
 
-RUN dotnet publish NotificationSystem/NotificationSystem.csproj -c Release -o out
+RUN dotnet publish NotificationSystem/11_NotificationSystem.csproj -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:3.1
 
@@ -12,4 +12,4 @@ WORKDIR /app
 
 COPY --from=build-env /app/out .
 
-ENTRYPOINT ["dotnet", "NotificationSystem.dll"]
+ENTRYPOINT ["dotnet", "11_NotificationSystem.dll"]
