Updated and implemented appsettings for client id, secret and redirect uri

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -15,7 +15,18 @@
         },
         "Swagger": {
             "ClientId":  "Swagger-UI"
-
+        },
+        "DataSources": {
+            "Github": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": "https://localhost:5001/api/wizard/oauth/callback/de38e528-1d6d-40e7-83b9-4334c51c19be"
+            },
+            "Gitlab": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": "https://localhost:5001/api/wizard/oauth/callback/66de59d4-5db0-4bf8-a9a5-06abe8d3443a"
+            }
         }
     },
     "Logging": {
