--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "UpdateInstitutionOnLogin": true, 
+    "UpdateInstitutionOnLogin": true,
     "ConnectionStrings": {
         "DefaultConnection": ""
     },
@@ -16,10 +16,18 @@
             "ClientId": "Swagger-UI"
 
         },
-        "Github": {
-            "ClientId": "",
-            "ClientSecret": ""
-        } 
+        "DataSources": {
+            "Github": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": ""
+            },
+            "Gitlab": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": ""
+            }
+        }
     },
     "Logging": {
         "LogLevel": {
