--- a/JobScheduler/13_JobScheduler.csproj
+++ b/JobScheduler/13_JobScheduler.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>dotnet-JobScheduler-3CE46EAB-4F12-4C7D-A37B-BFA136C798C1</UserSecretsId>
+    <AssemblyName>13_JobScheduler</AssemblyName>
+    <RootNamespace>13_JobScheduler</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-      <ProjectReference Include="..\MessageBrokerPublisher\MessageBrokerPublisher.csproj" />
-      <ProjectReference Include="..\Models\5_Models.csproj" />
+      <ProjectReference Include="..\MessageBrokerPublisher\09_MessageBrokerPublisher.csproj" />
+      <ProjectReference Include="..\Models\07_Models.csproj" />
   </ItemGroup>
 </Project>
