--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -95,6 +95,8 @@ services:
       - App__Api__DeXApiUrl=https://api.staging.dex.software
       - App__Api__ClientId=${API_CLIENT_ID}
       - App__Api__ClientSecret=${API_CLIENT_SECRET}
+      - App__ApiAuthentication__ClientId=${API_AUTHENTICATION_CLIENT_ID}
+      - App__ApiAuthentication__ClientSecret=${API_AUTHENTICATION_CLIENT_SECRET}
       - App__Frontend__RedirectUriFrontend=https://staging.dex.software/auth-callback
       - App__Frontend__RedirectUriPostman=https://www.postman.com/oauth2/callback
       - App__Frontend__RefreshUriFrontend=https://staging.dex.software/silent-refresh.html
@@ -113,6 +115,8 @@ services:
       - Cert_File=/app/identity.staging.dex.software_pfx.pfx
       - Cert_Thumb=${CERT_THUMB}
       - Cert_Password=${CERT_PASSWORD}
+      - App__JobScheduler__ClientId=${JOBSCHEDULER_IDENTITY_CLIENTID}
+      - App__JobScheduler__ClientSecet=${JOBSCHEDULER_IDENTITY_CLIENTSECRET}
       - SENTRY_DSN=https://9ab54615b99746ddaff11714a636f56e@o395685.ingest.sentry.io/5256525
     labels:
       - "traefik.enable=true"
@@ -154,6 +158,8 @@ services:
     restart: on-failure
     environment:
         - Config__IdentityServerConfig__IdentityUrl=https://identity.staging.dex.software
+        - Config__IdentityServerConfig__ClientId=${JOBSCHEDULER_IDENTITY_CLIENTID}
+        - Config__IdentityServerConfig__ClientSecret=${JOBSCHEDULER_IDENTITY_CLIENTSECRET}
         - Config__ApiConfig__ApiUrl=https://api.staging.dex.software
         - Config__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
         - Config__RabbitMQ__Username=${App__RabbitMQ__Username}
