Time between graduation jobs changed to a week

--- a/JobScheduler/appsettingsjobscheduler.json
+++ b/JobScheduler/appsettingsjobscheduler.json
@@ -9,7 +9,7 @@
     "Config": {
         "JobSchedulerConfig": {
             "TimeRange": 6,
-            "TimeBetweenJobsInMs": 10000
+            "TimeBetweenJobsInMs": 604800000
         },
         "ApiConfig": {
             "ApiUrl": ""
