--- a/JobScheduler/appsettingsjobscheduler.Development.json
+++ b/JobScheduler/appsettingsjobscheduler.Development.json
@@ -17,7 +17,7 @@
         "IdentityServerConfig": {
             "IdentityUrl": "https://localhost:5005/",
             "ClientId": "dex-jobscheduler",
-            "ClientSecret": "dex-jobscheduler"
+            "ClientSecret": "`HP(@`aQ]>wO4XJa4hU>,-HLHpo4h~"
         },
         "RabbitMQ": {
             "Hostname": "localhost",
