--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -37,7 +37,7 @@ services:
       - App__Frontend__ClientId=${FRONTEND_CLIENT_ID}
       - App__Frontend__ClientSecret=${FRONTEND_CLIENT_SECRET}
       - App__IdentityServer__IdentityUrl=${IDENTITY_URL}
-      - App__IdentityServer__ClientId=${API_AUTHENTICATION_CLIENT_ID}
+      - App__IdentityServer__ClientId=${API_CLIENT_ID}
       - App__IdentityServer__ClientSecret=${API_AUTHENTICATION_CLIENT_SECRET}
       - SENTRY_DSN=${SENTRY_DSN}
       - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
