--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -87,7 +87,7 @@ services:
       - App__Api__DeXApiUrl=https://api.dex.software
       - App__Api__ClientId=${API_CLIENT_ID}
       - App__Api__ClientSecret=${API_CLIENT_SECRET}
-      - App__ApiAuthentication__ClientId=${API_AUTHENTICATION_CLIENT_ID}
+      - App__ApiAuthentication__ClientId=${API_CLIENT_ID}
       - App__ApiAuthentication__ClientSecret=${API_AUTHENTICATION_CLIENT_SECRET}
       - App__Frontend__RedirectUriFrontend=https://dex.software/auth-callback
       - App__Frontend__RefreshUriFrontend=https://dex.software/silent-refresh.html
