--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -58,7 +58,7 @@ services:
       - App__Api__DeXApiUrl=${API_URL}
       - App__Api__ClientId=${API_CLIENT_ID}
       - App__Api__ClientSecret=${API_CLIENT_SECRET}
-      - App__ApiAuthentication__ClientId=${API_AUTHENTICATION_CLIENT_ID}
+      - App__ApiAuthentication__ClientId=${API_CLIENT_ID}
       - App__ApiAuthentication__ClientSecret=${API_AUTHENTICATION_CLIENT_SECRET}
       - App__Frontend__RedirectUriFrontend=${REDIRECT_URI_FRONTEND}
       - App__Frontend__RefreshUriFrontend=${REFRESH_URI_FRONTEND}
