--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -96,6 +96,7 @@ services:
       rabbitmq-network:
 
   jobscheduler:
+  image: digitalexcellence/jobscheduler
     build:
       context: .
       dockerfile: JobScheduler/Dockerfile
