--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -54,6 +54,12 @@ services:
       - App__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
       - App__RabbitMQ__Username=${App__RabbitMQ__Username}
       - App__RabbitMQ__Password=${App__RabbitMQ__Password}
+      - App__DataSources__Github__ClientId=${App__DataSources__Github__ClientId}
+      - App__DataSources__Github__ClientSecret=${App__DataSources__Github__ClientSecret}
+      - App__DataSources__Github__RedirectUri=${App__DataSources__Github__RedirectUri}
+      - App__DataSources__Gitlab__ClientId=${App__DataSources__Gitlab__ClientId}
+      - App__DataSources__Gitlab__ClientSecret=${App__DataSources__Gitlab__ClientSecret}
+      - App__DataSources__Gitlab__RedirectUri=${App__DataSources__Gitlab__RedirectUri}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.entrypoints=http"
