environment variables changed for local (non docker) development

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -41,8 +41,8 @@
             "PostLogoutUrisSwagger": "https://localhost:5001"
         },
         "JobScheduler": {
-            "ClientId": "job-scheduler",
-            "ClientSecret": "`HP(@`aQ]>wO4XJa4hU>,-HLHpo4h~"
+            "ClientId": "dex-jobscheduler",
+            "ClientSecret": "fGe34rE6F53dsT"
         },
         "ApiAuthentication": {
             "ClientId": "dex-api",
