--- a/JobScheduler/appsettingsjobscheduler.Development.json
+++ b/JobScheduler/appsettingsjobscheduler.Development.json
@@ -17,12 +17,12 @@
         "IdentityServerConfig": {
             "IdentityUrl": "https://localhost:5005/",
             "ClientId": "dex-jobscheduler",
-            "ClientSecret": "`HP(@`aQ]>wO4XJa4hU>,-HLHpo4h~"
+            "ClientSecret": "fGe34rE6F53dsT"
         },
         "RabbitMQ": {
             "Hostname": "localhost",
-            "Username": "test",
-            "Password": "test"
+            "Username": "guest",
+            "Password": "guest"
         }
     }
 }
