--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -108,13 +108,11 @@ services:
       - App__FfhictOIDC__RedirectUri=https://identity.dex.software/external/callback/fhict
       - App__ApiAuthentication__ClientId=${PRODUCTION_API_AUTHENTICATION_CLIENT_ID}
       - App__ApiAuthentication__ClientSecret=${PRODUCTION_API_AUTHENTICATION_CLIENT_SECRET}
-      - App__JobScheduler__ClientId={$PRODUCTION_JOBSCHEDULER_CLIENT_ID}
-      - App__JobScheduler__ClientSecret={$PRODUCTION_JOBSCHEDULER_CLIENT_SECRET}
       - Cert_File=/app/identity.dex.software_pfx.pfx
       - Cert_Thumb=${CERT_THUMB}
       - Cert_Password=${CERT_PASSWORD}
       - App__JobScheduler__ClientId=${JOBSCHEDULER_IDENTITY_CLIENTID}
-      - App__JobScheduler__ClientSecet=${JOBSCHEDULER_IDENTITY_CLIENTSECRET}
+      - App__JobScheduler__ClientSecret=${JOBSCHEDULER_IDENTITY_CLIENTSECRET}
       - SENTRY_DSN=https://9ab54615b99746ddaff11714a636f56e@o395685.ingest.sentry.io/5256525
     labels:
       - "traefik.enable=true"
@@ -158,15 +156,16 @@ services:
     container_name: jobscheduler
     restart: on-failure
     environment:
-        - Config__IdentityServerConfig__IdentityUrl=https://identity.dex.software
+        - Config__IdentityServerConfig__IdentityUrl=https://identity.dex.software/
         - Config__IdentityServerConfig__ClientId=${JOBSCHEDULER_IDENTITY_CLIENTID}
         - Config__IdentityServerConfig__ClientSecret=${JOBSCHEDULER_IDENTITY_CLIENTSECRET}
-        - Config__ApiConfig__ApiUrl=https://api.dex.software
+        - Config__ApiConfig__ApiUrl=https://api.dex.software/
         - Config__RabbitMQ__Hostname=${App__RabbitMQ__Hostname}
         - Config__RabbitMQ__Username=${App__RabbitMQ__Username}
         - Config__RabbitMQ__Password=${App__RabbitMQ__Password}
     networks:
         rabbitmq-network:
+        mssql-network:
 
   frontend:
     image: digitalexcellence/frontend:latest
