fixed conflicts after merge

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -1,7 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection":
-            "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "App": {
         "Frontend": {
@@ -40,16 +39,14 @@
             "Hostname": "localhost",
             "Username": "guest",
             "Password": "guest"
-        }
-            "Username": "test",
-            "Password": "test"
-        }        
+        },
+        "Username": "test",
+        "Password": "test"
     },
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft": "Warning",
             "Microsoft.Hosting.Lifetime": "Information"
-        }
     }
-}
+} }
