--- a/Repositories/04_Repositories.csproj
+++ b/Repositories/04_Repositories.csproj
@@ -20,9 +20,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Data\06_Data.csproj" />
+    <ProjectReference Include="..\MessageBrokerPublisher\09_MessageBrokerPublisher.csproj" />
     <ProjectReference Include="..\Models\07_Models.csproj" />
   </ItemGroup>
 
