--- a/IdentityServer/6_IdentityServer.csproj
+++ b/IdentityServer/6_IdentityServer.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
         <Version>1.0.1-beta</Version>
-    </PropertyGroup>w
+    </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="IdentityServer4" Version="3.1.0" />
