Updated csproj file and updated data generator

--- a/Services.Tests/03_Services.Tests.csproj
+++ b/Services.Tests/03_Services.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.12" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\API\01_API.csproj" />
     <ProjectReference Include="..\Repositories.Tests\05_Repositories.Tests.csproj" />
     <ProjectReference Include="..\Repositories\04_Repositories.csproj" />
     <ProjectReference Include="..\Services\02_Services.csproj" />
