Gitignore update for dev env notificationsystem

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,6 @@ IdentityServer/tempkey.rsa
 
 ###
 rabbitmq/data/
+
+# Dev config for notification system
+.NotificationSystem/appsettingsnotificationsystem.Development.json
