--- a/.gitignore
+++ b/.gitignore
@@ -341,4 +341,4 @@ IdentityServer/tempkey.rsa
 rabbitmq/data/
 
 # Dev config for notification system
-.NotificationSystem/appsettingsnotificationsystem.Development.json
+NotificationSystem/appsettingsnotificationsystem.Development.json
