Added collaborator resources

--- a/NotificationSystem/appsettingsnotificationsystem.Development.json
+++ b/NotificationSystem/appsettingsnotificationsystem.Development.json
@@ -6,8 +6,8 @@
             "Password": "test"
         },
         "SendGrid": {
-            "ApiKey": "test",
-            "EmailFrom": "test@test.nl",
+            "ApiKey": "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",
+            "EmailFrom": "sendgridtest@jurjenverbruggen.nl",
             "SandboxMode": false
         }
     },
