--- a/API/01_API.csproj
+++ b/API/01_API.csproj
@@ -7,6 +7,8 @@
         <Company>Digital Excellence Fontys</Company>
         <LangVersion>8</LangVersion>
         <Version>1.0.1-beta</Version>
+        <UserSecretsId>2e42aa9b-93be-4b66-99a4-cfbc4ee01acf</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -39,6 +41,7 @@
         <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0-preview1.19506.1" />
         <PackageReference Include="Microsoft.OpenApi" Version="1.1.4" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.12" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
         <PackageReference Include="NetEscapades.Configuration.Validation" Version="2.0.0" />
         <PackageReference Include="RestSharp" Version="106.11.4" />
@@ -52,7 +55,6 @@
         <ProjectReference Include="..\Data\06_Data.csproj" />
         <ProjectReference Include="..\MessageBrokerPublisher\09_MessageBrokerPublisher.csproj" />
         <ProjectReference Include="..\Models\07_Models.csproj" />
-        <ProjectReference Include="..\NotificationSystem\11_NotificationSystem.csproj" />
         <ProjectReference Include="..\Services\02_Services.csproj" />
     </ItemGroup>
 
