--- a/ElasticSynchronizer/appsettings.Development.json
+++ b/ElasticSynchronizer/appsettings.Development.json
@@ -2,8 +2,8 @@
     "App": {
         "RabbitMQ": {
             "Hostname": "localhost",
-            "Username": "guest",
-            "Password": "guest"
+            "Username": "test",
+            "Password": "test"
         },
         "Elastic": {
             "Hostname": "localhost",
