updated docker-compose files
Removed unnecessary builds in staging and production docker-compose. Updated deployment docker-compose.

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -173,6 +173,7 @@ services:
         rabbitmq-network:
         
   elasticsynchronizer:
+    image: digitalexcellence/elasticsynchronizer:latest
     container_name: elasticsynchronizer
     restart: on-failure
     depends_on: 
@@ -190,22 +191,8 @@ services:
       mssql-network:
       
   elasticsearch:
+    image: digitalexcellence/elasticsearch:latest
     container_name: elasticsearch
-    build:
-      context: elasticsearch/
-      args:
-        ELK_VERSION: 7.10.0
-    volumes:
-      - type: bind
-        source: ./elasticsearch/config/elasticsearch.yml
-        target: /usr/share/elasticsearch/config/elasticsearch.yml
-        read_only: true
-      - type: bind
-        source: ./elasticsearch/config/analysis/wn_s.txt
-        target: /usr/share/elasticsearch/config/analysis/wn_s.txt
-      - type: volume
-        source: elasticsearch
-        target: /usr/share/elasticsearch/data
     ports:
       - "9200:9200"
       - "9300:9300"
