--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -175,6 +175,7 @@ services:
         rabbitmq-network:
         
   elasticsynchronizer:
+    image: digitalexcellence/elasticsynchronizer:latest
     container_name: elasticsynchronizer
     restart: on-failure
     depends_on: 
@@ -192,22 +193,8 @@ services:
       mssql-network:
       
   elasticsearch:
+    image: digitalexcellence/elasticsearch:latest
     container_name: elasticsearch
-    build:
-      context: elasticsearch/
-      args:
-        ELK_VERSION: 7.10.0
-    volumes:
-      - type: bind
-        source: ./elasticsearch/config/elasticsearch.yml
-        target: /usr/share/elasticsearch/config/elasticsearch.yml
-        read_only: true
-      - type: bind
-        source: ./elasticsearch/config/analysis/wn_s.txt
-        target: /usr/share/elasticsearch/config/analysis/wn_s.txt
-      - type: volume
-        source: elasticsearch
-        target: /usr/share/elasticsearch/data
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -253,6 +240,5 @@ networks:
         - subnet: 172.16.238.0/24
   rabbitmq-network:
     driver: bridge
-
   proxy:
     external: true
