Restored identity server apssettings

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
         "DefaultConnection":
-        "Server=localhost,1433;Database=DeX;User=sa;Password=<YourStrong@Passw0rd>;Trusted_Connection=False;"
+            "Server=(LocalDb)\\MSSQLLocalDB;Database=Dex;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
@@ -50,13 +50,5 @@
         }
 
     },
-    "AllowedHosts": "*",
-    "Kestrel": {
-        "Certificates": {
-            "Default": {
-                "Path": "/usr/local/share/ca-certificates/localhost.pfx",
-                "Password": ""
-            }
-        }
-    }
+    "AllowedHosts": "*"
 }
