--- a/Models/07_Models.csproj
+++ b/Models/07_Models.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <LangVersion>8</LangVersion>
-        <Version>1.0.1-beta</Version>
+        <Version>1.1.0-beta</Version>
     </PropertyGroup>
 
     <ItemGroup>
