--- a/NotificationSystem/11_NotificationSystem.csproj
+++ b/NotificationSystem/11_NotificationSystem.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>1.0.1-beta</Version>
+    <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
