--- a/Repositories.Tests/05_Repositories.Tests.csproj
+++ b/Repositories.Tests/05_Repositories.Tests.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
-    <Version>1.0.1-beta</Version>
+    <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
   <ItemGroup>
