Enforced XML documentation all projects.
Added documentation for some missing classes.

--- a/IdentityServer/6_IdentityServer.csproj
+++ b/IdentityServer/6_IdentityServer.csproj
@@ -6,6 +6,10 @@
         <Version>1.1.0-beta</Version>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <DocumentationFile>.\IdentityServer.xml</DocumentationFile>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="IdentityServer4" Version="3.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
