--- a/MessageBrokerPublisher.Tests/10_MessageBrokerPublisher.Tests.csproj
+++ b/MessageBrokerPublisher.Tests/10_MessageBrokerPublisher.Tests.csproj
@@ -6,6 +6,10 @@
       <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\MessageBrokerPublisher_tests.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.12.0" />
