--- a/MessageBrokerPublisher/09_MessageBrokerPublisher.csproj
+++ b/MessageBrokerPublisher/09_MessageBrokerPublisher.csproj
@@ -5,6 +5,10 @@
     <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\MessageBrokerPublisher.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
