--- a/NotificationSystem.Tests/12_NotificationSystem.Tests.csproj
+++ b/NotificationSystem.Tests/12_NotificationSystem.Tests.csproj
@@ -6,6 +6,10 @@
       <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\NotificationSystem_tests.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
