--- a/NotificationSystem/11_NotificationSystem.csproj
+++ b/NotificationSystem/11_NotificationSystem.csproj
@@ -6,6 +6,10 @@
     <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\NotificationSystem.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
 
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
