--- a/Repositories.Tests/05_Repositories.Tests.csproj
+++ b/Repositories.Tests/05_Repositories.Tests.csproj
@@ -8,6 +8,10 @@
     <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\Repositories_tests.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Bogus" Version="29.0.2" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
