--- a/Repositories/04_Repositories.csproj
+++ b/Repositories/04_Repositories.csproj
@@ -6,6 +6,10 @@
     <Version>1.1.0-beta</Version>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\Repositories.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
   </ItemGroup>
