fixed an issue where tests didn't work after merge.

--- a/NotificationSystem/appsettingsnotificationsystem.Development.json
+++ b/NotificationSystem/appsettingsnotificationsystem.Development.json
@@ -6,7 +6,7 @@
             "Password": "test"
         },
         "SendGrid": {
-            "ApiKey": "test",
+            "ApiKey": "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",
             "EmailFrom": "test@test.nl",
             "SandboxMode": false
         }
