Added new fontysgitlab source adaptee

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -27,7 +27,14 @@
             "Gitlab": {
                 "ClientId": "",
                 "ClientSecret": "",
-                "RedirectUri": "https://localhost:5001/api/wizard/oauth/callback/66de59d4-5db0-4bf8-a9a5-06abe8d3443a"
+                "RedirectUri": "https://localhost:5001/api/wizard/oauth/callback/66de59d4-5db0-4bf8-a9a5-06abe8d3443a",
+                "OauthUrl": "https://gitlab.com/oauth/authorize?client_id={0}&redirect_uri={1}&response_type=code&scope=read_repository+read_user"
+            },
+            "FontysGitlab": {
+                "ClientId": "",
+                "ClientSecret": "",
+                "RedirectUri": "https://localhost:5001/api/wizard/oauth/callback/6a73f5ee-e7a5-4ef5-b874-0da0993d6f13",
+                "OauthUrl": "https://git.fhict.nl/oauth/authorize?client_id={0}&redirect_uri={1}&response_type=code&scope=read_repository+read_user"
             }
         },
         "RabbitMQ": {
