added mssql-network to jobscheduler network after merge fault

--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -169,6 +169,7 @@ services:
         - Config__RabbitMQ__Password=${App__RabbitMQ__Password}
     networks:
         rabbitmq-network:
+	mssql-network:
         
   elasticsynchronizer:
     image: digitalexcellence/elasticsynchronizer:latest
