--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -124,6 +124,7 @@ services:
         rabbitmq-network:
         
   elasticsynchronizer:
+    image:  digitalexcellence/elasticsynchronizer
     container_name: elasticsynchronizer
     restart: on-failure
     build: 
@@ -144,6 +145,7 @@ services:
       mssql-network:
       
   elasticsearch:
+    image:  digitalexcellence/elasticsearch
     container_name: elasticsearch
     build:
       context: elasticsearch/
