--- a/API/appsettingsapi.json
+++ b/API/appsettingsapi.json
@@ -31,9 +31,9 @@
             }
         },
         "RabbitMQ": {
-            "Hostname": "localhost",
-            "Username": "guest",
-            "Password": "guest"
+            "Hostname": "",
+            "Username": "",
+            "Password": ""
         }
     },
     "Logging": {
