--- a/ElasticSynchronizer/14_ElasticSynchronizer.csproj
+++ b/ElasticSynchronizer/14_ElasticSynchronizer.csproj
@@ -1,8 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <UserSecretsId>dotnet-ElasticSynchronizer-03111C2E-844A-4534-8446-C60B5B11289B</UserSecretsId>
+        <Version>1.2.0-beta</Version>
     </PropertyGroup>
 
     <ItemGroup>
