Performance testing with grafana wip

--- a/API/appsettingsapi.Development.json
+++ b/API/appsettingsapi.Development.json
@@ -37,8 +37,8 @@
         },
         "RabbitMQ": {
             "Hostname": "localhost",
-            "Username": "test",
-            "Password": "test"
+            "Username": "guest",
+            "Password": "guest"
         }
     },
     "Logging": {
