--- a/PerformanceTests/docker-compose-load-tests.yaml
+++ b/PerformanceTests/docker-compose-load-tests.yaml
@@ -15,6 +15,8 @@ services:
       - '8086:8086'
     environment:
       - INFLUXDB_DB=k6
+    logging:
+      driver: none
 
   grafana:
     image: grafana/grafana:latest
@@ -30,10 +32,12 @@ services:
       - ./Dashboards:/var/lib/grafana/dashboards
       - ./grafana-dashboard.yaml:/etc/grafana/provisioning/dashboards/dashboard.yaml
       - ./grafana-datasource.yaml:/etc/grafana/provisioning/datasources/datasource.yaml
+    logging:
+      driver: none
 
-  project_load_tests:
+  load_tests:
     image: loadimpact/k6
-    container_name: project_k6_load_tests
+    container_name: k6_load_tests
     networks:
       - k6
     ports:
@@ -41,9 +45,9 @@ services:
     environment: 
       - K6_OUT=influxdb=http://influxdb:8086/k6
     volumes:
-      - ./LoadTests/Project:/PerformanceTests/LoadTests/Project
-    command: run -e BASE_ADDRESS=${BASE_ADDRESS} /PerformanceTests/LoadTests/Project/project-load-tests.js
-      
+      - ./LoadTests:/PerformanceTests/LoadTests
+    command: run -e BASE_ADDRESS=${BASE_ADDRESS} /PerformanceTests/LoadTests/load-tests.js
+  
             
     
     
