--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,19 +29,19 @@ jobs:
         App__SendGrid__EmailFrom: test@dex.software
         
     - name: Test Repositories
-      run: dotnet test --no-restore --verbosity normal 05_Repositories.Tests
+      run: dotnet test --no-restore --verbosity normal Repositories.Tests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
         
     - name: Test MessageBrokerPublisher
-      run: dotnet test --no-restore --verbosity normal 10_MessageBrokerPublisher.Tests
+      run: dotnet test --no-restore --verbosity normal MessageBrokerPublisher.Tests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
         
     - name: Test NotificationSystem
-      run: dotnet test --no-restore --verbosity normal 12_NotificationSystem.Tests
+      run: dotnet test --no-restore --verbosity normal NotificationSystem.Tests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
@@ -51,6 +51,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Docker Compose
+      run: docker-compose up --build -d
+
+    - name: Sleep for 90 seconds
+      uses: juliangruber/sleep-action@v1
+      with:
+        time: 90s
 
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
@@ -65,7 +73,7 @@ jobs:
 
 
     - name: Test Services
-      run: dotnet test --no-restore --verbosity normal 15_IntegrationTests
+      run: dotnet test --no-restore --verbosity normal IntegrationTests
       env:
         App__SendGrid__ApiKey: ${{secrets.STAGING_SENDGRID_APIKEY }}
         App__SendGrid__EmailFrom: test@dex.software
