--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -39,9 +39,10 @@ services:
     environment:
       - ConnectionStrings__DefaultConnection=Server=db;Database=identity;User=sa;Password=Dexcelence!1;
       - App__Self__IssuerUri=https://identity:5005
-      - App__Api__DeXApiUrl=http://api:5000
+      - App__Api__DeXApiUrl=https://api:5001
       - ASPNETCORE_URLS=http://+:5004;https://+:5005;
       - ASPNETCORE_HTTPS_PORT=5005
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/etc/ssl/certs/apache-selfsigned.crt
       - App__JobScheduler__ClientId=dex-jobscheduler
       - App__JobScheduler__ClientSecret=test
       - App__ApiAuthentication__ClientSecret=test
