Updated test naming for ordering

--- a/IntegrationTests/15_IntegrationTests.csproj
+++ b/IntegrationTests/15_IntegrationTests.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\API\01_API.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\" />
+  </ItemGroup>
+
 </Project>
